# AlaweinOS

./: .ai-config.yml  .audit-report.md  .gitignore  .pre-commit-config.yaml  .reorganization-plan.md  CLAUDE.md  CLEANUP_PLAN_SUMMARY.md  CLEANUP_QUICK_START.md  CODEOWNERS  COMPREHENSIVE_CLEANUP_PLAN.md  CONTRIBUTING.md  DEPLOYMENT_RUNBOOK.md  FINAL_CLEANUP_COMPLETE.md  FINAL_CLEANUP_SUMMARY.md  FINAL_MERGE_GUIDE.md  GIT_STATUS.md  MAINTENANCE_SUMMARY.md  MERGE_STATUS.md  PROJECT.md  README.md  README.md.bak  READY_TO_USE.md  REPOSITORY_MAINTENANCE_PROMPT.md  SECURITY.md  SESSION_SUMMARY.md  START_HERE.md  STRUCTURE.md  UNIVERSAL_CLEANUP_PROMPT.md  merge.sh  pyproject.toml  test_status_dashboard.md
.archive/: README.md
.archive/completion-reports/: CLEANUP_PROGRESS.md  COMPLETE_FINAL_RESUME.md  FINAL_AUTONOMOUS_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_PROJECT_VALIDATION_REPORT.md  GRANTWRITER_TESTING_REPORT.md  PHASE_6-15_PROGRESS.md  PR_BATCH_2_COMPLETE.md  REFACTORING_COMPLETE_SUMMARY.md  REPO_HYGIENE_SUMMARY.md  STYLE-ENHANCEMENT-SUMMARY.md  TESTING_ACHIEVEMENT_REPORT.md  TEST_VALIDATION_COMPLETE.md
.archive/prompts/: OPTILIBRIA_SUPERPROMPT.md
.archive/session-reports/: AUTONOMOUS_SESSION_SUMMARY.md  FINAL_SESSION_REPORT.md  SESSION_2_COMPLETION_REPORT.md  SESSION_4_REFACTORING_REPORT.md
.archive/sprint-reports/: 3_DAY_SPRINT.md
.claude/: instructions.md  settings.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md  security_vulnerability.md
.github/profile/: README.md
.github/workflows/: deploy-mezan.yml  integration_tests.yml  mezan-ci.yml  optilibria-nightly-benchmark.yml  talair-ci.yml
.meta/: DEPENDENCY_STANDARDIZATION_NOTES.md
MEZAN/: .gitignore  .pre-commit-config.yaml  BACKLOG_IMPROVEMENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPREHENSIVE_DELIVERY_SUMMARY.md  COMPREHENSIVE_PROJECT_HANDOFF_FOR_SIDER_AI.md  CONTRIBUTING.md  HANDOFF_TO_LOCAL_SETUP_CLAUDE.md  Important-1.md  LICENSE  LOCAL_AI_ORCHESTRATION_SUPERPROMPT.md  MEZAN_AGILE_ENGINE.md  MEZAN_IMPLEMENTATION_REPORT.md  README.md  SESSION_COMPLETE.txt  START_HERE.md  docker-compose.yml  start-here.md
MEZAN/.claude/: COORDINATION_GUIDE.md  settings.local.json
MEZAN/ATLAS/: .gitignore  .pre-commit-config.yaml  ATLAS_COMPLETE_DOCUMENTATION.md  ATLAS_ENGINE_HANDOFF.md  ATLAS_FINAL_SUMMARY.md  CONTRIBUTING.md  DELIVERABLES_SUMMARY.md  Dockerfile  FAQ.md  IMPLEMENTATION_GUIDE.md  INDEX.md  INTEGRATION_CHECKLIST.md  PROJECT_REVIEW.md  QUICK_DECISIONS.md  QUICK_START.md  README.md  RESTRUCTURING_SUMMARY.md  SETUP.md  START_HERE.md  STRUCTURE.md  WEEK_1_COMPLETION_SUMMARY.md  docker-compose.yml
MEZAN/Libria/: ACTIONABILITY_AUDIT.md  ARCHITECTURE.md  ARCHITECTURE_MASTER.md  COHERENCE_CHECK.md  COMPLETENESS_CHECKLIST.md  DECISIONS.md  DEEP_RESEARCH_CONSOLIDATION.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_MASTER_PLAN.md  INDEX.md  INTEGRATION.md  MONOREPO_STRUCTURE.md  README.md  RESEARCH_CONTRIBUTIONS_CATALOG.md  RESEARCH_NOVELTY.md  RISKS.md  ROADMAP.md  ROADMAP_DETAILED.md  SYNTHESIS_COMPLETE.md  TOOLS_INTEGRATION_GUIDE.md  USAGE_EXAMPLES.md
MEZAN/MEZAN/: ARCHITECTURE.md  COMPREHENSIVE_PROJECT_HANDOFF_FOR_SIDER_AI.md  FILE_MANIFEST.md  FINAL_PROJECT_VALIDATION_REPORT.md  MASTER_PROJECT_INDEX.md  NOVEL_METHODS_INVENTORY.md  README.md
MEZAN/core/: README.md  __init__.py  config.yaml  optimizer_factory.py  optimizer_interface.py
MEZAN/docs/: ATLAS_LIBRIA_INTEGRATION_SPEC.md  BENCHMARKING.md  CLAUDE_COORDINATION_GUIDE.md  COMPREHENSIVE_DELIVERY_SUMMARY.md  COMPREHENSIVE_PROJECT_HANDOFF_FOR_SIDER_AI.md  CRITICAL_ANALYSIS.md  DEPLOYMENT.md  DOCKER_GUIDE.md  FILE_MANIFEST.md  HELM_GUIDE.md  README.md  (+8 more)
SimCore/: .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  capacitor.config.ts  package-lock.json  package.json  vite.config.ts  vitest.config.ts
TalAI/: 100_PERCENT_QUALITY_ACHIEVEMENT.md  20_REFINEMENT_CYCLES_REPORT.md  AGENTS_FINAL_REPORT.md  BUILD_SPRINT_PLAN.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMPLETE_PRODUCT_CATALOG.md  CONTRIBUTING.md  CYCLES_21-26_REPORT.md  CYCLES_27-32_UARO_REPORT.md  Dockerfile  FINAL_STATUS_SUMMARY.md  IDEA_ARCHIVE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_DOCUMENTATION.md  INTEGRATION_EXAMPLE.py  MASTER_IDEA_INVENTORY.md  README.md  REFACTOR_REPORT.md  RESPONSE.md  SECURITY.md  SESSION_3_COMPLETION_REPORT.md  SOURCES.txt  SPRINT_COMPLETION_REPORT.md  SUMMARY.md  TALAIR_CRITICAL_ANALYSIS.md  TESTING_PROGRESS_SUMMARY.md  TURING_CHALLENGE_IMPLEMENTATION_STATUS.md  TURING_CHALLENGE_MASTER.md  TURING_CHALLENGE_QAP_APPLICATIONS.md  TURING_CHALLENGE_QUICK_START.md  YOLO_MODE_FINAL_REPORT.md  YOLO_MODE_SUMMARY.md  first-of-its-own.md  optimization_client.py  solo_coder.py
docker/: Dockerfile.cpu  Dockerfile.gpu  docker-compose.yml  prometheus.yml
docs/: Makefile  README.md  benchmarks.rst  conf.py  deployment.rst  index.rst  testing.rst
k8s/: mezan-deployment.yaml  monitoring.yaml
optilibria/: .gitignore  .pre-commit-config.yaml  ADVANCED_METHODS.md  ANALYSIS_REPORTS_INDEX.md  API_INTEGRATION_ANALYSIS.md  BACKWARD_COMPATIBILITY.md  BENCHMARKING_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTEXT_FOR_AI.md  CONTRIBUTING.md  CORRECTED_QAP_ADAPTER.py  GAP_ANALYSIS_META_VS_OPTILIBRIA.md  IMPLEMENTATION_REPORT.md  INTEGRATION_ISSUES_DETAILED.md  LICENSE  MATHEMATICAL_FIXES_IMPLEMENTATION_GUIDE.md  MATHEMATICAL_FIXES_REQUIRED.md  MATHEMATICAL_REVIEW_SUMMARY.md  NOVEL_METHODS.md  PEER_REVIEW_VERIFICATION.md  PERFORMANCE_OPTIMIZATION.md  PHASE_B_COMPLETE_SUMMARY.md  PHASE_B_PROGRESS.md  PR_BATCH_3_COMPLETE.md  PR_BATCH_4_COMPLETE.md  QAPLIB_BENCHMARKING_GUIDE.md  README.md  RESEARCH_FINDINGS.md  SECURITY.md  TAXONOMY_CLASSIFICATION.md  optilibria_client.py  pyproject.toml  pytest.ini
qmlab/: .pre-commit-config.yaml  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  TESTING_VERIFICATION_REPORT.md  ULTIMATE-ENHANCEMENT-COMPLETE.md  package-lock.json
reports/: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md
scripts/: README.md  master_cleanup.sh
(+519 files in other folders)
