# AlaweinOS Monorepo - Root Configuration
# This file provides workspace-level configuration for the entire monorepo

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alaweinos"
version = "4.1.0"
description = "AlaweinOS - Enterprise Software & Optimization Systems Monorepo (MEZAN V4.1.0)"
authors = [{name = "Meshal Alawein", email = "meshal@berkeley.edu"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "optimization",
    "machine-learning",
    "quantum-computing",
    "simulation",
    "enterprise",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/AlaweinOS/AlaweinOS"
Documentation = "https://github.com/AlaweinOS/AlaweinOS/blob/main/README.md"
Repository = "https://github.com/AlaweinOS/AlaweinOS"
"Bug Tracker" = "https://github.com/AlaweinOS/AlaweinOS/issues"

# Core dependencies for MEZAN
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.10.0,<2.0.0",
    "pandas>=1.3.0",
    "networkx>=3.0",
    "redis>=4.0.0",
]

# Development dependencies for the entire workspace
[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.0.0",
    "pre-commit>=3.0.0",
]

# MEZAN-specific extras
mezan = [
    "flask>=2.3.0,<3.0.0",
    "flask-cors>=4.0.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.0.0",
]

# GPU acceleration
gpu = [
    "torch>=2.0.0",
]

# Visualization
viz = [
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

# Tool configurations
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    'venv',
    '.venv',
    'build',
    'dist',
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --tb=short"
testpaths = [
    "tests",
    "MEZAN/core/tests",
    "MEZAN/ATLAS/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
